prevent pills from wrapping

--- a/apps/site/assets/css/_homepage.scss
+++ b/apps/site/assets/css/_homepage.scss
@@ -349,6 +349,7 @@
         font-size: $font-size-small-caps !important;
         text-transform: uppercase;
         font-weight: 700;
+        white-space: nowrap;
       }
     }
   }
